src/styles/global/_base.scss
@import '~styles/utils/variables';

:root {
  font-size: 12px;
  @media #{$screen-small} {
    font-size: 14px;
  }
  @media #{$screen-medium} {
    font-size: 16px;
  }
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  background: $lite;
  color: $dark;
  font-family: $base-font-family;
  font-weight: 500;
  @media #{$screen-medium} {
    -webkit-font-smoothing: antialiased;
  }
}

a {
  color: $dark;
}

p {
  font-size: 1.125rem;
  margin-bottom: .5em;
}

ul {
  margin-left: 20px;
}

